crates/client/src/client/schema/snapshots/fuel_core_client__client__schema__storage_read_replay__tests__execution_trace_block_tx_gql_output.snap
---
source: crates/client/src/client/schema/storage_read_replay.rs
expression: query.query
---
mutation StorageReadReplay($height: U32!) {
  storageReadReplay(height: $height) {
    column
    key
    value
  }
}
