crates/client/src/client/schema/snapshots/fuel_core_client__client__schema__storage_read_replay__tests__storage_read_replay_gql_output.snap
---
source: crates/client/src/client/schema/storage_read_replay.rs
expression: query.query
---
query StorageReadReplay($height: U32!) {
  storageReadReplay(height: $height) {
    column
    key
    value
  }
}
